--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-scripts": "3.0.1",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "styled-icons": "^8.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
